Configuration changes to get Sparrow running on a cluster